# town_generator

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: deploy.yml  main.yml
src/: cellular_generator.rs  component.rs  lib.rs  main.rs  map.rs  player.rs  rect.rs
static/: index.html
