[package]
name = "town_generator"
version = "0.1.0"
authors = ["Zachary Roga", "Ryan Butler <thebutlah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl"]
curses = ["rltk/curses"]
opengl = ["rltk/opengl"]

[dependencies]
rltk = { version = "0.8.0", default-features = false }
specs = "0.16.1"
specs-derive = "0.4.1"
petgraph = "0.5.0"
num = "0.3.0"

[target.wasm32-unknown-unknown.dependencies]
# wasm-bindgen currently requires that the CLI tool and the library version exactly match.
wasm-bindgen = "=0.2.67"
